<resources>
    <string name="app_name">Barnacle</string>

    <string name="barnacle">따개비</string>
    <string name="AddExplanation">: 예방접종 챙기기</string>

    <string name="text_id">id</string>
    <string name="text_password">password</string>
    <string name="text_idKR">아이디 (이메일)</string>
    <string name="text_passwordKR">비밀번호</string>

    <string name="text_loginKR">로그인</string>
    <string name="text_logoutKR">로그아웃</string>
    <string name="text_login_out">로그인 / 로그아웃</string>
    <string name="text_SignUpKR">회원가입</string>
    <string name="text_FindIdPwKR">아이디 / 비밀번호 찾기</string>

    <string name="pressId">아이디를 입력하세요</string>
    <string name="checkId">중복 확인</string>
    <string name="pressEmail">이메일을 입력하세요</string>
    <string name="pressPassword">비밀번호를 입력하세요</string>
    <string name="confirmPassword">비밀번호 확인</string>
    <string name="ex_service">서비스 소개</string>
    <string name="search">병원/약국 찾기</string>
    <string name="write">접종 상황 기록하기</string>
    <string name="find_self_check">나에게 맞는 예방접종 알아보기</string>
    <string name="to_learn">예방접종이란?</string>

    <string name="to_learn_Ex">
        \t면역(immunity)은 자기 자신(self)의 물질과 외부물질(foreign material)을 구별하여
        외부물질에 대항함으로써 이를 제거하는 인체의 능력을 일컫는다. 대부분의 병원체는 면역체계에 의해
        외부물질로 인식되므로 면역은 감염질환으로부터 인체를 보호하는 역할을 수행한다. \n
        \t백신 또는 예방주사는 항원, 즉 병원체를 약하게 만들어 인체에 주입하여 항체를 형성하게 하여
        그 질병에 저항하는 후천적 면역이 생기도록 하는 의약품이다.
        우리는 예방주사를 통해 해당하는 질병에 관한 면역체계를 확립할 수 있으며 예방접종으로 인간이 정복한 질병도 있다.

    </string>
    <string name="self_check_t">성인 권장 예방접종 자가진단</string>

    <string name="ex_app_Ex">
        \t소아 예방 접종처럼 국가적으로 권장하는 필수 예방 접종에 대한 앱은 시중에 많이 출시되어 있어 찾아보기 쉽고,
        아이를 키우는 부모들의 관심을 많이 받고 있기 때문에 맘 카페 같은 곳에서의 정보 공유도 활발하게 되는 편이다.
        하지만 성인 예방 접종은 관심을 두지 않으면 어떤 예방 접종이 있는지조차 모르는 사람들이 많다.
        백신을 통해 항체를 만들어 병에 대한 저항력을 키우는 일은 개인과 집단의 면역력을 형성하는 데에 있어 중요한 요소라 생각하기 때문에
        권장되는 예방 접종을 통해 전염병과 질병을 예방하고 건강한 일상을 지키기 위해 이 서비스를 기획하게 되었다.

    </string>

</resources>
