<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_login1"
        android:layout_width="match_parent"
        android:layout_height="181dp"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom|center_horizontal"
        android:text="@string/barnacle"
        android:textColor="@color/black"
        android:textSize="36dp" />

    <TextView
        android:id="@+id/tv_login2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="60dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/AddExplanation"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/et_Id"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@color/theme"
        android:hint="@string/text_idKR"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@color/theme"
        android:hint="@string/text_passwordKR"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="60dp"
        android:background="@color/black"
        android:text="@string/text_loginKR"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_FindId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:stateListAnimator="@null"
        android:text="@string/text_FindIdPwKR" />

    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:stateListAnimator="@null"
        android:text="@string/text_SignUpKR" />

</LinearLayout>