<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_SingUp"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="60dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/text_SignUpKR"
        android:textColor="#000000"
        android:textSize="36dp" />

    <EditText
        android:id="@+id/et_SetId"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="#ecf0f1"
        android:hint="@string/pressId"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#636363" />

    <EditText
        android:id="@+id/et_SetEmail"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="#ecf0f1"
        android:hint="@string/pressEmail"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#636363" />

    <EditText
        android:id="@+id/et_SetPassword"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="#ecf0f1"
        android:hint="@string/pressPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#636363" />

    <EditText
        android:id="@+id/et_ConfirmPassword"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="#ecf0f1"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#636363" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        >

        <RadioButton
            android:id="@+id/genderWoman"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:checked="false"
            android:text="여자" />

        <RadioButton
            android:id="@+id/genderMan"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="남자" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:text="@string/text_SignUpKR" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:stateListAnimator="@null"
        android:text="@string/text_loginKR"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btn_FindId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:stateListAnimator="@null"
        android:text="@string/text_FindIdPwKR" />

</LinearLayout>