<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_SingUp"
        android:layout_width="match_parent"
        android:layout_height="181dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="80dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/text_SignUpKR"
        android:textColor="@color/black"
        android:textSize="36dp" />


    <EditText
        android:id="@+id/et_SetEmail"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@color/theme"
        android:hint="@string/pressEmail"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint" />

    <EditText
        android:id="@+id/et_SetPassword"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@color/theme"
        android:hint="@string/pressPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/hint"
        android:textColorHint="@color/hint" />

    <EditText
        android:id="@+id/et_ConfirmPassword"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@color/theme"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint" />

    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/text_SignUpKR" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:stateListAnimator="@null"
        android:text="@string/text_loginKR"
        android:textColor="@color/black" />

</LinearLayout>